--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,4 +11,5 @@ export(symmetric.dirichlet.mle)
 importFrom("methods","slot")
 importFrom("plyr","rbind.fill.matrix")
 importFrom("stats","rgamma")
+importFrom("topicmodels","LDA")
 importFrom("utils","flush.console")
